Fixed issue where task icons got hidden if text was too long #6116

--- a/src/sql/workbench/parts/tasks/browser/media/tasksPanel.css
+++ b/src/sql/workbench/parts/tasks/browser/media/tasksPanel.css
@@ -39,8 +39,7 @@
 	background-size: 16px;
 	background-position: left center;
 	background-repeat: no-repeat;
-	padding-right: 6px;
-	width: 22px;
+	padding-right: 24px;
 	height: 22px;
 	display: inline-block;
 }
